[project]
name = "valr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=23.0.0",
    "build>=0.10.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.25.0",
    "setuptools>=75.8.2",
    "twine>=4.0.0",
    "types-requests>=2.31.0",
]
